FIX Extra space under description in My-offerings

--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,10 @@ markdown p {
   margin-bottom: 1em;
 }
 
+markdown p:last-child {
+  margin-bottom: 0;
+}
+
 markdown ul,
 markdown ol {
   margin-bottom: 1em;
