--- a/src/app/pages/user-profile/profile-sections/org-info/org-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/org-info/org-info.component.html
@@ -127,7 +127,8 @@
             </div>
         </form>
 
-        <h2 class="md:text-3xl lg:text-4xl font-bold text-primary-100 ml-4 dark:text-white m-4">{{ 'PROFILE._add_logo' | translate }}</h2> 
+        <h2 class="md:text-3xl lg:text-4xl font-bold text-primary-100 ml-4 dark:text-white m-4">{{ 'PROFILE._add_logo' | translate }}</h2>
+        <hr class="h-px mr-4 ml-4 bg-primary-100 dark:bg-white border-0">
         @if(showImgPreview){
             <div class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl px-8 pb-8 pt-40 max-w-sm mx-auto m-4 shadow-lg">
                 <img src="{{imgPreview}}" class="absolute inset-0 h-full w-full object-cover">
