FIX Not possible to see close button + On dark theme Dome Support change color of border + Missing indication that subcategory is selected

--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
@@ -1609,7 +1609,7 @@
                 </button>
             </div>
             <!-- Modal body -->
-            <div class="w-full h-full">
+            <div class="w-full max-h-[80vh] overflow-y-auto overflow-x-hidden">
             <form class="lg:grid lg:grid-cols-80/20 gap-4 m-4 p-4" [formGroup]="priceForm" (change)="checkValidPrice()">
                 <div>
                     <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_OFFER._name' | translate }}</label>
