--- a/src/app/chatbot-widget/chatbot-widget.component.css
+++ b/src/app/chatbot-widget/chatbot-widget.component.css
@@ -49,6 +49,7 @@
     z-index: -123456;
     opacity: 0;
     transition: all .5s ease-in-out;
+    border-radius: 20px;
 }
 
 /* CONTENT IS OPEN */
@@ -121,8 +122,7 @@
     align-items: center;
     justify-content: center;
     padding: 15px 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-radius: 20px 20px 0 0;
     box-shadow: var(--primaryBoxShadow);
 }
 
