--- a/src/app/pages/user-profile/profile-sections/billing-info/billing-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/billing-info/billing-info.component.html
@@ -82,7 +82,8 @@
 
 <!-- BILL ADDRESS EDIT modal -->
 @if (editBill){
-    <div id="edit-bill-modal" [ngClass]="editBill ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-40 justify-center items-center w-full md:inset-0 h-fit lg:h-[calc(100%-1rem)] max-h-full shadow-2xl">
+    <div id="edit-bill-modal" [ngClass]="editBill ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true"
+    class="flex fixed top-0 mt-4 justify-center overflow-x-hidden z-40 justify-center items-center w-full md:inset-0 h-full max-h-screen shadow-2xl">
         <div class="w-4/5 lg:w-1/2 relative bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 rounded-lg shadow bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
             <!-- Modal header -->
             <div class="flex items-center justify-between pr-2 pt-2 rounded-t dark:border-gray-600">
@@ -95,7 +96,7 @@
                 </button>
             </div>
             <!-- Modal body -->
-            <div class="w-full h-full">
+            <div class="w-full max-h-[80vh] overflow-y-auto">
                <app-billing-account-form [billAcc]="billToUpdate"></app-billing-account-form>
             </div>
         </div>
