--- a/src/app/shared/categories-filter/categories-filter.component.html
+++ b/src/app/shared/categories-filter/categories-filter.component.html
@@ -5,7 +5,7 @@
         <h2 [id]="'accordion-heading-'+idx">
           @if (category.children) {
             @if (category.children.length != 0) {
-              <div [ngClass]="$first ? classListFirst : $last ? classListLast : classList">
+              <div [ngClass]="checkClasses($first,$last,category)">
                 <span class="text-left justify-start">{{ category?.name }}</span>
                 <div class="justify-end inline-flex">
                   <div class="justify-end" (click)="onClick(category)">
@@ -43,4 +43,3 @@
     
     }
     </div>
-
