ADD services and resources to users inventory + fixes

--- a/src/app/pages/product-inventory/product-inventory.component.html
+++ b/src/app/pages/product-inventory/product-inventory.component.html
@@ -49,10 +49,10 @@
             <inventory-products></inventory-products>
           }
           @if(show_serv){
-              serv
+            <inventory-services></inventory-services>
           }
           @if(show_res){
-              res
+            <inventory-resources></inventory-resources>
           }
         </div>      
     </div>
