--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -28,11 +28,11 @@
         </li>
         <li>
           <a (click)="onLoginClick()" class="sm:block lg:hidden cursor-pointer py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 lg:hover:bg-transparent lg:border-0 lg:hover:text-secondary-50 lg:p-0 dark:text-white lg:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent" aria-current="page">Login</a>
-        </li>
+        </li>        
       </ul>
     </div>
 
-    <div class="grid grid-cols-3">
+    <div class="flex flex-cols">
       <div class="flex flex-cols">
         <a href="{{ knowledge }}" target="_blank" class="w-10 mr-2 hidden lg:block text-white dark:text-gray-400 hover:bg-secondary-50 hover:text-primary-100 dark:hover:bg-gray-700 rounded-lg text-sm p-2.5">
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
@@ -47,7 +47,25 @@
           <button (click)="toggleCartDrawer();$event.stopPropagation();"  class="hidden lg:block mr-2 text-white dark:text-gray-400 hover:bg-secondary-50 hover:text-primary-100 dark:hover:bg-gray-700 rounded-lg text-sm p-2.5"><fa-icon [icon]="faCartShopping"></fa-icon></button>
         }
       </div>
+      <div class="flex mr-2 min-w-10 min-h-10">
+        <!-- Default flag display (click to show dropdown) -->
+        <div class="flex inline-flex items-center align-middle cursor-pointer" data-dropdown-toggle="flagDropdown" data-dropdown-placement="bottom-end">
+            <img class="w-10 h-10" src="assets/flags/{{ defaultLang }}.svg" alt="{{ defaultLang }}"/>
+        </div>
       
+        <!-- Dropdown of flags (visible only when the dropdown is open) -->
+        
+        <div id="flagDropdown" class="hidden z-50 bg-secondary-50 divide-y divide-primary-100/50 rounded-lg shadow w-fit dark:bg-gray-700 dark:divide-gray-600 " >
+          @for(country of langs; track country){
+            <ul class="p-2 cursor-pointer text-sm text-gray-700 dark:text-gray-200">
+              <li (click)="switchLanguage(country)" class="flex flex-row">
+                <img class="w-8 h-8" src="assets/flags/{{ country }}.svg" alt="{{ country }}"/>
+                <span class="ml-2 inline-flex align-middle">{{ country }}</span>
+              </li>
+            </ul>
+          }
+        </div>
+      </div>
       @if (is_logged) {
       <!-- User menu section -->
       <div data-dropdown-toggle="userDropdown" data-dropdown-placement="bottom-end" class="relative inline-flex items-center justify-center w-10 h-10 overflow-hidden bg-gray-100 rounded-full dark:bg-gray-600 cursor-pointer">
